--- a/Timeline/backend/src/main/resources/application.properties
+++ b/Timeline/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 server.port=8888
+
+spring.datasource.url=jdbc:mysql://localhost:3306/timeline?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=123456
