--- a/Timeline/frontend/package.json
+++ b/Timeline/frontend/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "element-ui": "^2.12.0",
+    "sinon": "^7.5.0",
     "vue": "^2.6.10"
   },
   "devDependencies": {
