--- a/Timeline/frontend/package.json
+++ b/Timeline/frontend/package.json
@@ -23,7 +23,7 @@
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "6.0.1",
     "moxios": "^0.4.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.0",
