--- a/Timeline/backend/pom.xml
+++ b/Timeline/backend/pom.xml
@@ -80,6 +80,12 @@
             <version>0.8.5</version>
 
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>17.0.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
